# tvheadend_to_hls

./: .dockerignore  BUILD.md  DEPLOYMENT.md  Dockerfile  README.md  compose.yaml  entrypoint.sh  list_channels.py  nginx.conf  pyproject.toml
service/: Dockerfile  entrypoint.sh
service/nginx/: nginx.conf
service/python/: tvh_to_hls.py
src/tvhtohls/: __init__.py  __main__.py  app.py  config.py  flags.py  streams.py  tvheadend.py
