[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tvhtohls"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)"]
dynamic = ["version", "description"]
dependencies = [
    "uvicorn",
    "fastapi",
    "requests",
]

[project.scripts]
tvhtohls = "tvhtohls.__main__:main"

[project.urls]
Home = "https://github.com/Casandro/tvheadend_to_hls/"
